@@ -206,7 +206,8 @@ mkdir -p $RPM_BUILD_ROOT/var/lib/rpm
 for dbi in \
 	Basenames Conflictname Dirnames Group Installtid Name Providename \
 	Provideversion Removetid Requirename Requireversion Triggername \
-	Packages __db.001 __db.002 __db.003 __db.004 __db.005 __db.006 __db.007 \
+	Sigmd5 Sha1header Filemd5s Packages \
+	__db.001 __db.002 __db.003 __db.004 __db.005 __db.006 __db.007 \
 	__db.008 __db.009
 do
     touch $RPM_BUILD_ROOT/var/lib/rpm/$dbi
@@ -316,6 +317,7 @@ fi
 %rpmdbattr	/var/lib/rpm/Conflictname
 %rpmdbattr	/var/lib/rpm/__db.0*
 %rpmdbattr	/var/lib/rpm/Dirnames
+%rpmdbattr	/var/lib/rpm/Filemd5s
 %rpmdbattr	/var/lib/rpm/Group
 %rpmdbattr	/var/lib/rpm/Installtid
 %rpmdbattr	/var/lib/rpm/Name
@@ -325,6 +327,8 @@ fi
 %rpmdbattr	/var/lib/rpm/Removetid
 %rpmdbattr	/var/lib/rpm/Requirename
 %rpmdbattr	/var/lib/rpm/Requireversion
+%rpmdbattr	/var/lib/rpm/Sigmd5
+%rpmdbattr	/var/lib/rpm/Sha1header
 %rpmdbattr	/var/lib/rpm/Triggername
 
 %endif
@@ -631,4 +635,9 @@ fi
 - a couple more perl.{prov,req} fiddles.
 - macro for %files, always include %defattr(), redhat config only.
 - fix: drop header region when writing repackaged legacy header.
+- bail on %files macro.
 - transaction rollbacks are functional.
+- generate index for pkgid (aka Sigmd5) tag, query/verify by pkgid.
+- generate index for hdrid (aka Sha1header) tag, query/verify by hdrid.
+- generate index for fileid (aka Filemd5s) tag, query/verify by fileid.
+- query/verify by install transaction id.
